2000-07-19  H.J. Lu  <hjl@gnu.org>

	* elf.c (_bfd_elf_print_private_bfd_data): Fix DT_CHECKSUM.

2000-07-19  H.J. Lu  <hjl@gnu.org>

	* elf.c (_bfd_elf_print_private_bfd_data): Handle DT_BIND_NOW,
	DT_INIT_ARRAY, DT_FINI_ARRAY, DT_INIT_ARRAYSZ, DT_FINI_ARRAYSZ,
	DT_RUNPATH, DT_FLAGS, DT_PREINIT_ARRAY, DT_PREINIT_ARRAYSZ,
	DT_PLTPADSZ, DT_MOVEENT, DT_MOVESZ, DT_FEATURE, DT_POSFLAG_1,
	DT_SYMINSZ, DT_SYMINENT, DT_CONFIG, DT_DEPAUDIT, DT_AUDIT,
	DT_PLTPAD, DT_MOVETAB, DT_SYMINFO, DT_RELACOUNT, DT_RELCOUNT,
	DT_FLAGS_1, DT_USED and DT_CHECKSUM.

Tue Jul 18 13:11:54 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* elf.c (bfd_elf_get_sign_extend_vma, bfd_elf_get_arch_size): Move
 	renamed functions from here...
	(assign_section_numbers): Use renamed functions.
	(prep_headers): Use renamed functions.
	
	* bfd.c (bfd_get_sign_extend_vma, bfd_get_arch_size): ...To here.
	* bfd-in.h (bfd_get_sign_extend_vma, bfd_get_arch_size): Update.
	* bfd-in2.h: Regenerate.

2000-07-18  Ulf Carlsson  <ulfc@engr.sgi.com>

	* elf32-mips.c (_bfd_mips_elf_finish_dynamic_symbol): Add
	paranthesis in if statement.

2000-07-17  Koundinya K  <kk@ddeorg.soft.net>

	Enable the support for Traditional MIPS. 
	* elf32-mips.c (IRIX_COMPAT): Recognize bfd_elf32_tradbigmips_vecand
	return ict_none appropriately for traditional mips targets.
	(STUB_LW): Change 0x8f998000 to 0x8f998010 for traditional mips.
	(STUB_MOVE): Conditionalize for traditonal mips.
	(STUB_LI16): Likewise.
	(_bfd_mips_elf_modify_segment_map): Conditionalize to avoid making
	room for RTPROC header.
	(_bfd_mips_elf_modify_segment_map): For a normal mips executable set
	the permission for the PT_DYNAMIC as read, write and execute.
	(mips_elf_calculate_relocation): Check for the symbol _DYNAMIC_LINKING
	for traditonal mips.
	(_bfd_mips_elf_create_dynamic_sections): Add the symbol
	_DYNAMIC_LINKING for traditonal mips.
	(_bfd_mips_elf_create_dynamic_sections): Add the symbol __RLD_MAP
	in case of traditonal mips.