@@ -1,3 +1,7 @@
+2000-07-19  Nick Clifton  <nickc@cygnus.com>
+
+	* format.c: Fix formatting.
+
 2000-07-19  H.J. Lu  <hjl@gnu.org>
 
 	* elf.c (_bfd_elf_print_private_bfd_data): Fix DT_CHECKSUM.
